overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@
   bottom: -40%;
   left: -40%;
   z-index: 1;
-  overflow-x: hidden;
 
 
 }
@@ -21,7 +20,6 @@
   top: -30%;
   right: -45%;
   z-index: 1;
-  overflow-x: hidden;
 
 }
 
@@ -37,11 +35,16 @@
   font-size: 5rem;
 }
 
-body {
+#root {
+  background-color: #000;
+}
+
+.App {
   background-color: #000;
   color: #f5f5f7;
   overflow-x: hidden;
-  max-width: 1600px;
+  max-width: 1400px;
+  width: 100vw;
   margin: 0 auto;
 
 }
@@ -50,7 +53,6 @@ body {
   overflow: hidden;
   width: 90%;
   margin: 0 auto;
-  background-color: aqua;
   position: relative;
   top: 30%;
 }
@@ -114,13 +116,11 @@ nav ul li {
 .contact,
 .skills {
   width: 100%;
-  height: 70vh;
-
-}
-
-.tech {
+  height: 65vh;
   position: relative;
 }
+
+
 
 .contact {
   background-color: transparent;
@@ -128,11 +128,13 @@ nav ul li {
   z-index: 10;
 }
 
-.skills {}
+.main {
+  position: relative;
+}
 
 .main p {
-  position: relative;
-  top: 60%;
+  position: absolute;
+  bottom: 0;
   left: 20%;
   font-size: 2rem;
   text-shadow: 0px 0px 5px #000000;
@@ -143,8 +145,8 @@ nav ul li {
 }
 
 .hi {
-  position: relative;
-  top: 20vh;
+  position: absolute;
+  top: 20%;
   left: 10%;
   font-size: 5rem;
   z-index: 10;
@@ -153,8 +155,8 @@ nav ul li {
 }
 
 .im {
-  position: relative;
-  top: 25vh;
+  position: absolute;
+  top: 50%;
   left: 10%;
   font-size: 5rem;
   z-index: 10;
@@ -201,7 +203,7 @@ nav ul li {
 
 .about h2 {
   position: relative;
-  top: 100%;
+  top: 10%;
   left: 10%;
   font-size: 5rem;
   text-shadow: 0px 0px 5px #000000;
@@ -218,7 +220,7 @@ nav ul li {
 
 .about p {
   position: relative;
-  top: 130%;
+  top: 30%;
   left: 10%;
   width: 80%;
   font-size: 4rem;
@@ -245,7 +247,7 @@ nav ul li {
   position: relative;
   width: 80%;
   left: 10%;
-  top: 0;
+  top: 15%;
   display: flex;
   flex-direction: column;
   gap: .5rem;
@@ -258,7 +260,7 @@ nav ul li {
 
 .contact h2 {
   position: relative;
-  top: -10%;
+  top: 10;
   left: 8%;
   font-size: 5rem;
   text-shadow: 0px 0px 5px #000000;
@@ -327,10 +329,8 @@ label {}
 }
 
 
-@media only screen and (max-width:391px) {
-  body {
-    overflow-x: hidden;
-  }
+@media only screen and (max-width:400px) {
+
 
   nav {
     width: 100vw;
@@ -342,7 +342,7 @@ label {}
   }
 
   .im {
-    top: 20vh;
+    top: 25vh;
   }
 
   .hi,
@@ -352,26 +352,33 @@ label {}
   }
 
   .main p {
-    right: 2.5rem;
-    top: 60%;
+    bottom: 0;
+    left: 10%;
     font-size: 2rem;
-    text-align: end;
+    text-align: start;
+    width: 90%;
   }
 
   .about h2 {
     font-size: 4rem;
+    width: 85%;
   }
 
   .about p {
     font-size: 2rem;
     width: 85%;
     left: 2rem;
-    top: 130%;
-    text-align: end;
+    text-align: start;
+  }
+
+  .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .contact h2 {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 
   .name-email {
